Add tests, add lombok, add README, add logging, separate socket handler and service, add spring configuration, rename application