@@ -1,27 +1,37 @@
-/*
- * This file was generated by the Gradle 'init' task.
- */
-
 plugins {
     id 'application'
 }
+
+application {
+    mainClass = 'com.task.guessnumber.GuessNumberApplication'
+}
+
+group = 'com.task'
+version = '0.0.1-SNAPSHOT'
+description = 'guess-number'
 
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
-}W
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation libs.org.springframework.boot.spring.boot.starter.websocket
-    implementation libs.org.springframework.boot.spring.boot.starter
-    testImplementation libs.org.springframework.boot.spring.boot.starter.test
+    implementation 'org.springframework.boot:spring-boot-starter-websocket:3.3.0'
+    implementation 'org.springframework.boot:spring-boot-starter:3.3.0'
+    compileOnly 'org.projectlombok:lombok:1.18.32'
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.3.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
 }
 
-group = 'com.task'
-version = '0.0.1-SNAPSHOT'
-description = 'guess-the-number'
+test {
+    useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
+}
